empathy (2.34.0+git.20110531.338a6e-0ubuntu0+easton1) natty; urgency=low

  * New upstream snapshot.

 -- Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>  Tue, 31 May 2011 15:20:12 +0100

empathy (2.34.0+git.20110526.adcea1-0ubuntu0+easton1) natty; urgency=low

  * New upstream snapshot.

 -- Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>  Thu, 26 May 2011 21:17:07 +0100

empathy (2.34.0+git.20110520.5773ec-0ubuntu0+easton1) natty; urgency=low

  * New upstream snapshot.

 -- Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>  Fri, 20 May 2011 17:24:12 +0100

empathy (2.34.0+git.20110513.8e3f9e-0ubuntu0+easton1) natty; urgency=low

  * New upstream snapshot.
    + Build with gudev support for camera detection.

 -- Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>  Fri, 13 May 2011 09:00:30 +0100

empathy (2.34.0+git.20110506.376bd2-0ubuntu0+easton1) natty; urgency=low

  * New upstream snapshot.

 -- Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>  Fri, 06 May 2011 15:06:34 +0100

empathy (2.34.0+git.20110504.c33fde-0ubuntu0+easton1) natty; urgency=low

  * New upstream snapshot.

 -- Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>  Wed, 04 May 2011 10:59:38 +0100

empathy (2.34.0+git.20110504.dbc398-0ubuntu0+easton1) natty; urgency=low

  * New upstream snapshot.

 -- Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>  Wed, 04 May 2011 08:43:14 +0100

empathy (2.34.0+git.20110429.1c68ea-0ubuntu0+easton1) natty; urgency=low

  * New upstream snapshot.
    + debian/patches/*:
      - Refreshed.

 -- Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>  Fri, 29 Apr 2011 16:01:08 +0100

empathy (2.34.0+git.20110427.ea8d26-0ubuntu0+easton1) natty; urgency=low

  * New upstream snapshot.
  * debian/patches/build_yell_statically.patch: removed.

 -- Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>  Wed, 27 Apr 2011 18:17:39 +0100

empathy (2.34.0+git.20110425.93f10e-0ubuntu0+easton1) natty; urgency=low
