@@ -3,14 +3,14 @@
 +++ b/configure.ac
 @@ -56,6 +56,8 @@
  NETWORK_MANAGER_REQUIRED=0.7.0
- WEBKIT_REQUIRED=1.1.15
+ WEBKIT_REQUIRED=1.3.13
  GNOME_CONTROL_CENTER_GTK3_REQUIRED=2.31.4
 +INDICATE_REQUIRED=0.4.91
 +INDICATE_GTK_REQUIRED=0.4.91
  
  # telepathy-yell
  prev_top_build_prefix=$ac_top_build_prefix
-@@ -498,6 +500,34 @@
+@@ -523,6 +525,34 @@
  AC_SUBST(MEEGO_LIBS)
  
  # -----------------------------------------------------------
@@ -45,7 +45,7 @@
  # nautilus-sendto
  # -----------------------------------------------------------
  AC_ARG_ENABLE(nautilus-sendto,
-@@ -599,6 +629,7 @@
+@@ -624,6 +654,7 @@
  	CA Cert Path................:  ${GTLS_SYSTEM_CA_FILE}
  
      Features:
@@ -222,7 +222,7 @@
  	GtkTargetList *contact_targets;
  	GtkTargetList *file_targets;
  
-@@ -1330,6 +1339,72 @@
+@@ -1333,6 +1342,72 @@
  	}
  }
  
@@ -295,7 +295,7 @@
  static void
  chat_window_show_or_update_notification (EmpathyChatWindow *window,
  					 EmpathyMessage *message,
-@@ -1508,6 +1583,9 @@
+@@ -1512,6 +1587,9 @@
  
  		empathy_sound_play (GTK_WIDGET (priv->dialog),
  		    EMPATHY_SOUND_MESSAGE_INCOMING);
@@ -305,7 +305,7 @@
  
  		/* Pending messages have already been displayed in the approver, so we don't
  		* display a notification for those. */
-@@ -1580,6 +1658,10 @@
+@@ -1584,6 +1662,10 @@
  	empathy_chat_messages_read (chat);
  
  	chat_window_update_chat_tab (chat);
@@ -316,7 +316,7 @@
  }
  
  static void
-@@ -1696,6 +1778,11 @@
+@@ -1700,6 +1782,11 @@
  	/* Update the title, since we now mark all unread messages as read. */
  	chat_window_update_chat_tab_full (priv->current_chat, FALSE);
  
@@ -328,7 +328,7 @@
  	return FALSE;
  }
  
-@@ -2040,6 +2127,11 @@
+@@ -2046,6 +2133,11 @@
  	g_object_unref (gui);
  
  	priv->chatroom_manager = empathy_chatroom_manager_dup_singleton (NULL);
@@ -1310,7 +1310,7 @@
  
  	/* The idle event source to migrate butterfly's logs */
  	guint butterfly_log_migration_members_changed_id;
-@@ -437,11 +445,23 @@
+@@ -440,11 +448,23 @@
  			    EmpathyEvent        *event,
  			    EmpathyMainWindow   *window)
  {
@@ -1334,7 +1334,7 @@
  }
  
  static void
-@@ -1321,6 +1341,10 @@
+@@ -1348,6 +1368,10 @@
  	g_object_unref (priv->ui_manager);
  	g_object_unref (priv->chatroom_manager);
  
@@ -1345,7 +1345,7 @@
  	g_object_unref (priv->gsettings_ui);
  	g_object_unref (priv->gsettings_contacts);
  
-@@ -2401,6 +2425,10 @@
+@@ -2431,6 +2455,10 @@
  		l = l->next;
  	}
  
@@ -1448,7 +1448,7 @@
  } EmpathyStatusIconPriv;
  
  G_DEFINE_TYPE (EmpathyStatusIcon, empathy_status_icon, G_TYPE_OBJECT);
-@@ -457,6 +468,92 @@
+@@ -458,6 +469,92 @@
  		empathy_window_present (GTK_WINDOW (priv->window));
  	}
  }
@@ -1541,7 +1541,7 @@
  
  static void
  status_icon_notify_visibility_cb (GSettings   *gsettings,
-@@ -476,10 +573,36 @@
+@@ -477,10 +574,36 @@
  	EmpathyStatusIconPriv *priv = GET_PRIV (icon);
  	gboolean               visible;
  
@@ -1578,7 +1578,7 @@
  static void
  status_icon_presence_changed_cb (EmpathyStatusIcon *icon)
  {
-@@ -663,6 +786,9 @@
+@@ -664,6 +787,9 @@
  	g_object_unref (priv->notify_mgr);
  	g_object_unref (priv->gsettings_ui);
  	g_object_unref (priv->window);
@@ -1588,7 +1588,7 @@
  }
  
  static void
-@@ -723,6 +849,13 @@
+@@ -724,6 +850,13 @@
  			  G_CALLBACK (status_icon_notify_visibility_cb),
  			  icon);
  
@@ -1602,7 +1602,7 @@
  	status_icon_create_menu (icon);
  
  	g_signal_connect_swapped (priv->account_manager,
-@@ -755,6 +888,9 @@
+@@ -756,6 +889,9 @@
  	EmpathyStatusIconPriv *priv;
  	EmpathyStatusIcon     *icon;
  	gboolean               should_hide;
@@ -1612,7 +1612,7 @@
  
  	g_return_val_if_fail (GTK_IS_WINDOW (window), NULL);
  
-@@ -762,6 +898,24 @@
+@@ -763,6 +899,24 @@
  	priv = GET_PRIV (icon);
  
  	priv->window = g_object_ref (window);
@@ -1637,7 +1637,7 @@
  
  	g_signal_connect_after (priv->window, "key-press-event",
  			  G_CALLBACK (status_icon_key_press_event_cb),
-@@ -778,6 +932,12 @@
+@@ -779,6 +933,12 @@
  		should_hide = TRUE;
  	}
  
