@@ -3,7 +3,7 @@
 +++ b/configure.ac
 @@ -44,6 +44,7 @@
  TELEPATHY_GLIB_REQUIRED=0.14.1
- TELEPATHY_LOGGER=0.2.8
+ TELEPATHY_LOGGER=0.2.10
  UNIQUE_REQUIRED=1.1.2
 +IDO_REQUIRED=0.1.14
  
