@@ -1,6 +1,7 @@
 empathy (2.34.0+git.20110531.338a6e-0ubuntu0+easton1) natty; urgency=low
 
   * New upstream snapshot.
+  * Patches refreshed.
 
  -- Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>  Tue, 31 May 2011 15:20:12 +0100
 
